# AudioToolkit

./: README.md  gradle.properties  settings.gradle  usb.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: audio_base.h
app/src/main/cpp/native_alsa/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/native_alsa/include/: audio_alsa.h  audio_base.h
app/src/main/cpp/native_alsa/src/: audio_alsa.cpp
app/src/main/cpp/native_alsa/tinyalsa/: CMakeLists.txt
app/src/main/cpp/native_alsa/tinyalsa/include/tinyalsa/: pcm.h
app/src/main/cpp/native_alsa/tinyalsa/utils/: tinycap.c
app/src/main/cpp/native_oboe_manager/: CMakeLists.txt  oboe_jni.cpp
app/src/main/cpp/native_oboe_manager/include/: OboeAudioStream.h  OboeManager.h  WavFile.h
app/src/main/cpp/native_oboe_manager/src/: OboeAudioStream.cpp  OboeManager.cpp  WavFile.cpp
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_fourth.xml  fragment_second.xml  fragment_third.xml  toolkit_about.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/apk/: README.md
gradle/wrapper/: gradle-wrapper.properties
multicompile/: build.gradle
multicompile/src/main/cpp/: CMakeLists.txt
multicompile/src/main/cpp/compile/: CMakeLists.txt  multicompile.cpp
multicompile/src/main/cpp/compile4_4/: CMakeLists.txt  multicompile.cpp
(+51 files in other folders)
